# tutorial

./: Notes.txt  a.out  ex2  ex_2.cpp  plotting.m
commenting/: a.out  ex1  ex1.cpp  ex1_good  ex1_simplify  ex1_simplify.cpp
compilation/: CMakeLists.txt  ex1  ex1.cpp  ex2  ex2.cpp  ex3  ex3.cpp  helper1.cpp  helper1.h  helper2.cpp  helper2.h  structTest  structTest.c
delivable/rrt/: rrt-3-link-arm.cpp
doxygen/: Doxyfile
doxygen/html/: ex2_8cpp.html  files.html  globals.html  globals_func.html  globals_vars.html  index.html
doxygen/latex/: ex2_8cpp.tex  files.tex  refman.tex
ex1-simple/: CMakeLists.txt
ex3-linking/: CMakeLists.txt  error.txt
latex/: ex3.aux  ex3.dvi  ex3.tex
matlab/: RectCircle.m  RectRect.m  rect.m
rrt-2-link-arm/: Doxyfile  Result.txt  a.out  collision  collision_checker_test.cpp  dataset.h5  log.txt  report.aux  report.dvi  report.tex  result.h5  rrt  rrt-2-link-arm.cpp  rrt-2-link-artm.cpp  rrt-3-link-arm.cpp  rrt-3-link-artm.cpp
rrt-2-link-arm/cpp_plot/: a.out  calc_obstacle_position.m  ex2.cpp  ex2_matlab.m  inverse_matrix_test.m  jointplot.m  link2jointplot.m  link3jointplot.m  mypath  octave-core  path  path_ex2  rect.m  testpath
rrt-2-link-arm/html/: files.html  globals.html  globals_func.html  globals_vars.html  index.html  rrt-2-link-arm_8cpp.html  rrt-3-link-arm_8cpp.html
rrt-2-link-arm/latex/: files.tex  refman.tex  rrt-2-link-arm_8cpp.tex  rrt-3-link-arm_8cpp.tex
rrt-2-link-arm/rrt_matlab/: A.mat  calcCenterPoint.m  calcnewpoint.m  octave-core  rrt.m  twopointsdist.m
runtime/: a.out  ex1  ex1.cpp
(+20 files in other folders)
